Fix compilation errors in ElasticInferenceServiceTests